[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dtools.circular-array"
authors = [
    { name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed"
]
dependencies = []
dynamic = ["version", "description"]
keywords = [
    "circular array", "circle array", "CA",
    "double ended queue", "dequeue", "dqueue",
    "pop", "push", "popL", "popR", "pushL", "pushR", "indexable",
    "auto-resizing", "auto resizing", "resizing"
]

[project.optional-dependencies]
test = ["pytest >=8.3.2"]

[project.urls]
Source = "https://github.com/grscheller/dtools-circular-array"
Changelog = "https://github.com/grscheller/dtools-circular-array/blob/main/CHANGELOG.md"
Documentation = "https://grscheller.github.io/dtools-docs/circular-array"

[tool.flit.sdist]
exclude = ["dist", "docs", ".gitignore", ".mypy_cache"]

[tool.pytest.ini_options]
testpaths = ["tests"]
consider_namespace_packages = true

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]

[tool.pylsp-mypy]
enabled = true
live-mode = true
strict = true
report_progress = true

[tool.ruff]
target-version = "py313"
exclude = ["**/tests/**"]

[tool.ruff.format]
quote-style = "single"
docstring-code-line-length = 72

